- update all translations
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@3 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/po/gl.po
+++ b/po/gl.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-06-02 13:23+0400\n"
-"PO-Revision-Date: 2014-06-02 13:25+0300\n"
+"PO-Revision-Date: 2014-06-02 15:18+0300\n"
 "Last-Translator: AlexL <loginov.alex.valer@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -162,21 +162,21 @@ msgstr "A_xuda"
 
 #: gperiodic.c:335
 msgid "E_xit"
-msgstr ""
+msgstr "E_ditar"
 
 #: gperiodic.c:335
 msgid "Exit the program"
-msgstr ""
+msgstr "SaÃr do programa"
 
 #: gperiodic.c:337
 #: gperiodic.c:339
 msgid "_About"
-msgstr ""
+msgstr "_Acerca de"
 
 #: gperiodic.c:337
 #: gperiodic.c:339
 msgid "About gperiodic"
-msgstr ""
+msgstr "Acerca de gperiodic"
 
 #: gperiodic.c:357
 msgid "GPeriodic"
@@ -228,7 +228,7 @@ msgstr ""
 
 #: gperiodic.h:103
 msgid "Copyright (C) 1999-2007 Jonas Frantz, 2014 Alexey Loginov"
-msgstr ""
+msgstr "Copyright (C) 1999-2007 Jonas Frantz, 2014 Alexey Loginov"
 
 #: gperiodic.h:104
 msgid "This program shows the periodic table of elements and information about these elements"
@@ -369,7 +369,7 @@ msgstr "Hidróxeno"
 
 #: table_data.h:149
 msgid "0.0708 (@ -253&#176;C)"
-msgstr ""
+msgstr "0.0708 (@ -253&#176;C)"
 
 #: table_data.h:149
 #: table_data.h:150
@@ -406,7 +406,7 @@ msgstr ""
 #: table_data.h:254
 #: table_data.h:255
 msgid "HEX"
-msgstr ""
+msgstr "HEX"
 
 #: table_data.h:149
 #: table_data.h:159
@@ -431,7 +431,7 @@ msgstr "Helio"
 
 #: table_data.h:150
 msgid "0.147 (@ -270&#176;C)"
-msgstr ""
+msgstr "0.147 (@ -270&#176;C)"
 
 #: table_data.h:150
 msgid "Inert, colorless, odorless, tasteless gas"
@@ -455,7 +455,7 @@ msgstr "Litio"
 
 #: table_data.h:152
 msgid "68 (+1e) or 76 (+1e)"
-msgstr ""
+msgstr "68 (+1e) ou 76 (+1e)"
 
 #: table_data.h:152
 #: table_data.h:161
@@ -475,7 +475,7 @@ msgstr ""
 #: table_data.h:243
 #: table_data.h:244
 msgid "BCC"
-msgstr ""
+msgstr "BCC"
 
 #: table_data.h:152
 #: table_data.h:161
@@ -525,7 +525,7 @@ msgstr "Boro"
 #: table_data.h:235
 #: table_data.h:238
 msgid "RHL"
-msgstr ""
+msgstr "RHL"
 
 #: table_data.h:154
 msgid "Hard, brittle, lustrous black semimetal"
@@ -549,15 +549,15 @@ msgstr "Carbono"
 
 #: table_data.h:155
 msgid "2.25 (graphite)"
-msgstr ""
+msgstr "2.25 (grafito)"
 
 #: table_data.h:155
 msgid "1860.00 (diamond)"
-msgstr ""
+msgstr "1860.00 (diamante)"
 
 #: table_data.h:155
 msgid "HEX (graphite), DIA (diamond)"
-msgstr ""
+msgstr "HEX (grafito), DIA (diamante)"
 
 #: table_data.h:155
 msgid "Dense, Black (graphite)"
@@ -605,19 +605,19 @@ msgstr "Nitróxeno"
 
 #: table_data.h:156
 msgid "0.808 (@ -195.8&#176;C)"
-msgstr ""
+msgstr "0.808 (@ -195.8&#176;C)"
 
 #: table_data.h:156
 msgid "HEX or CUB"
-msgstr ""
+msgstr "HEX ou CUB"
 
 #: table_data.h:156
 msgid "4.039 (HEX)"
-msgstr ""
+msgstr "4.039 (HEX)"
 
 #: table_data.h:156
 msgid "1.651 (HEX)"
-msgstr ""
+msgstr "1.651 (HEX)"
 
 #: table_data.h:156
 msgid "Colorless, odorless, tasteless, and generally inert gas"
@@ -641,15 +641,15 @@ msgstr "Osíxeno"
 
 #: table_data.h:157
 msgid "1.149 (@ -183&#176;C)"
-msgstr ""
+msgstr "1.149 (@ -183&#176;C)"
 
 #: table_data.h:157
 msgid "MCL or CUB"
-msgstr ""
+msgstr "MCL ou CUB"
 
 #: table_data.h:157
 msgid "6.830 (CUB)"
-msgstr ""
+msgstr "6.830 (CUB)"
 
 #: table_data.h:157
 msgid "Colorless, odorless, tasteless gas; pale blue liquid"
@@ -673,12 +673,12 @@ msgstr "Fluor"
 
 #: table_data.h:158
 msgid "1.108 (@ -189&#176;C)"
-msgstr ""
+msgstr "1.108 (@ -189&#176;C)"
 
 #: table_data.h:158
 #: table_data.h:251
 msgid "MCL"
-msgstr ""
+msgstr "MCL"
 
 #: table_data.h:158
 msgid "Greenish-yellow, pungent, corrosive gas"
@@ -703,7 +703,7 @@ msgstr "Neon"
 
 #: table_data.h:159
 msgid "1.204 (@ -246&#176;C)"
-msgstr ""
+msgstr "1.204 (@ -246&#176;C)"
 
 #: table_data.h:159
 #: table_data.h:163
@@ -728,7 +728,7 @@ msgstr ""
 #: table_data.h:246
 #: table_data.h:247
 msgid "FCC"
-msgstr ""
+msgstr "FCC"
 
 #: table_data.h:159
 #: table_data.h:206
@@ -811,7 +811,7 @@ msgstr "Silicio"
 #: table_data.h:164
 #: table_data.h:183
 msgid "DIA"
-msgstr ""
+msgstr "DIA"
 
 #: table_data.h:164
 msgid "Amorphous form is brown powder; crystalline form has a gray"
@@ -867,7 +867,7 @@ msgstr "Xofre"
 #: table_data.h:249
 #: table_data.h:250
 msgid "ORC"
-msgstr ""
+msgstr "ORC"
 
 #: table_data.h:166
 msgid "Tasteless, odorless, light-yellow, brittle solid"
@@ -883,7 +883,7 @@ msgstr "Cloro"
 
 #: table_data.h:167
 msgid "1.56 (@ -33.6&#176;C)"
-msgstr ""
+msgstr "1.56 (@ -33.6&#176;C)"
 
 #: table_data.h:167
 msgid "Greenish-yellow, disagreeable gas"
@@ -909,7 +909,7 @@ msgstr "Argon"
 
 #: table_data.h:168
 msgid "1.40 (@ -189,35&#176;C)"
-msgstr ""
+msgstr "1.40 (@ -189,35&#176;C)"
 
 #: table_data.h:168
 msgid "Colorless, tasteless, odorless noble gas"
@@ -1040,7 +1040,7 @@ msgstr "Manganeso"
 #: table_data.h:176
 #: table_data.h:239
 msgid "CUB"
-msgstr ""
+msgstr "CUB"
 
 #: table_data.h:176
 msgid "Hard, brittle, gray-white metal"
@@ -1186,7 +1186,7 @@ msgstr ""
 #: table_data.h:184
 #: table_data.h:203
 msgid "TRG"
-msgstr ""
+msgstr "TRG"
 
 #: table_data.h:184
 msgid "Steel gray, brittle semimetal"
@@ -1234,7 +1234,7 @@ msgstr "Cripton"
 
 #: table_data.h:187
 msgid "2.155 (@ -153&#176;C)"
-msgstr ""
+msgstr "2.155 (@ -153&#176;C)"
 
 #: table_data.h:187
 msgid "Dense, colorless, odorless, and tasteless gas"
@@ -1479,7 +1479,7 @@ msgstr "Indio"
 #: table_data.h:202
 #: table_data.h:248
 msgid "TET"
-msgstr ""
+msgstr "TET"
 
 #: table_data.h:201
 msgid "Very soft, silvery-white metal"
@@ -1563,7 +1563,7 @@ msgstr "Xenon"
 
 #: table_data.h:206
 msgid "3.52 (@ -107.05&#176;C)"
-msgstr ""
+msgstr "3.52 (@ -107.05&#176;C)"
 
 #: table_data.h:206
 msgid "Heavy, colorless, and odorless noble gas"
@@ -1690,7 +1690,7 @@ msgstr "Promecio"
 
 #: table_data.h:215
 msgid "(+3e)97.9 or (+3e)111"
-msgstr ""
+msgstr "(+3e)97.9 ou (+3e)111"
 
 #: table_data.h:215
 msgid "Light-grey, radioactive element"
@@ -2017,7 +2017,7 @@ msgstr "Ouro"
 
 #: table_data.h:234
 msgid "(-3e) 185 (+1e) 137 or (+3e) 85 (+1e) 137"
-msgstr ""
+msgstr "(-3e) 185 (+1e) 137 ou (+3e) 85 (+1e) 137"
 
 #: table_data.h:234
 msgid "Soft, malleable, yellow metal"
@@ -2033,7 +2033,7 @@ msgstr "Mercurio"
 
 #: table_data.h:235
 msgid "13.546 (@ +20&#176;C)"
-msgstr ""
+msgstr "13.546 (@ +20&#176;C)"
 
 #: table_data.h:235
 msgid "Heavy, silver-white metal that is in its liquid state at"
@@ -2132,7 +2132,7 @@ msgstr "Radon"
 
 #: table_data.h:241
 msgid "4.4 (@ -62&#176;C)"
-msgstr ""
+msgstr "4.4 (@ -62&#176;C)"
 
 #: table_data.h:241
 msgid "Heavy radioactive gas"
@@ -2172,7 +2172,7 @@ msgstr "Radio"
 
 #: table_data.h:244
 msgid "5.5 (@ +20&#176;C)"
-msgstr ""
+msgstr "5.5 (@ +20&#176;C)"
 
 #: table_data.h:244
 msgid "Silvery white, radioactive element"
@@ -2274,7 +2274,7 @@ msgstr "Plutonio"
 
 #: table_data.h:251
 msgid "71-100 or (+4e) 93 (+3e) 108"
-msgstr ""
+msgstr "71-100 ou (+4e) 93 (+3e) 108"
 
 #: table_data.h:251
 msgid "G.T.Seaborg, J.W.Kennedy, E.M.McMillan, A.C.Wohl"
@@ -2572,7 +2572,7 @@ msgstr ""
 
 #: table_data.h:271
 msgid "Un (one) un (one) trium (three)"
-msgstr ""
+msgstr "Un (1) un (1) trium (3)"
 
 #: table_data.h:272
 msgid "Flerovium"
@@ -2596,7 +2596,7 @@ msgstr ""
 
 #: table_data.h:273
 msgid "Un (one) un (one) pentium (five)"
-msgstr ""
+msgstr "Un (1) un (1) pentium (5)"
 
 #: table_data.h:274
 msgid "Livermorium"
@@ -2624,7 +2624,7 @@ msgstr ""
 
 #: table_data.h:275
 msgid "Un (one) un (one) septium (seven)"
-msgstr ""
+msgstr "Un (1) un (1) septium (7)"
 
 #: table_data.h:276
 msgid "Ununoctium"
@@ -2636,4 +2636,5 @@ msgstr ""
 
 #: table_data.h:276
 msgid "Un (one) un (one) octium (eight)"
-msgstr ""
+msgstr "Un (1) un (1) octium (8)"
+
