- update info about authors and contributors
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@6 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,10 +1,10 @@
 Jonas Frantz <jonas@frantz.fi>
 Kyle R. Burton <?>
-Piotr Najman <picio@bogucice.pl>
+Piotr Najman <?>
 Arno W. Peters <a.w.peters@ieee.org>
 Georges Khaznadar <?>
 Mauricio Rivera <?>
-Lalo Martins <lalo@webcom.com>
+Lalo Martins <?>
 Sven Neumann <?>
 Christian Klein <?>
 Koen Kooi <?>
@@ -17,4 +17,12 @@ Sebastien Bacher <seb128@debian.org>
 Daniel Leidert <daniel.leidert@wgdd.de>
 Theppitak Karoonboonyanan <thep@linux.thai.net>
 Zach Ploskey <zploskey@gmail.com>
+Jon Abbott <?>
+Andrew Dalke <?>
+Gunner Poulsen <?>
+Gonzalo Regueiro Iglesias <gonzalo.regueiro.iglesias@gmail.com>
+Leandro Regueiro <leandro.regueiro@gmail.com>
+Andrea Tasso <andrea@tasso.info>
+Osman Köşeli <?>
+Ireneusz Imiolek <imiolek.i@googlemail.com>
 Alexey Loginov <loginov.alex.valer@gmail.com>
