--- a/po/da.po
+++ b/po/da.po
@@ -1,16 +1,16 @@
-# Translation of gperiodic to Dansk
-# This file is distributed under the same license as the Gperiodic package.
-# Copyright (C) Gunner Poulsen <gp@lyngbjerggaardskolen.dk>, 2003.
+# Translation of gperiodic to Dansk.
+# This file is distributed under the same license as the gperiodic package.
+# Copyright (C) Gunner Poulsen <?>, 2003.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gperiodic-da\n"
+"Project-Id-Version: gperiodic\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-06-02 13:23+0400\n"
 "PO-Revision-Date: 2014-06-02 14:22+0300\n"
 "Last-Translator: AlexL <loginov.alex.valer@gmail.com>\n"
 "Language-Team: Dansk <dansk@klid.dk>\n"
-"Language: \n"
+"Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
