--- a/po/gl.po
+++ b/po/gl.po
@@ -1,22 +1,21 @@
-#
-#
+# Translation of gperiodic to Galician.
 # Copyright (C) 2006 Free Software Foundation, Inc.
+# This file is distributed under the same license as the gperiodic package.
 # Gonzalo Regueiro Iglesias <gonzalo.regueiro.iglesias@gmail.com>, 2006.
 # Leandro Regueiro <leandro.regueiro@gmail.com>, 2006.
 #
 #   Traducido polo Proxecto Trasno: http://trasno.net
 #   Axúdanos a traducir software libre¡
 #
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: gperiodic\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-06-02 13:23+0400\n"
 "PO-Revision-Date: 2014-06-02 15:18+0300\n"
 "Last-Translator: AlexL <loginov.alex.valer@gmail.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language-Team: Galician <LL@li.org>\n"
+"Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
