--- a/po/sv.po
+++ b/po/sv.po
@@ -1,17 +1,17 @@
-# Swedish translations for gperiodic
-# Copyright (C) 2003, Jonas Frantz
+# Swedish translations for gperiodic.
+# Copyright (C) 2003, Jonas Frantz.
 # This file is distributed under the same license as the gperiodic package.
-# Jonas Frantz <frantz@acclab.helsinki.fi>, 2003.
+# Jonas Frantz <jonas@frantz.fi>, 2003.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: gperiodic\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-06-02 13:23+0400\n"
 "PO-Revision-Date: 2014-06-02 15:56+0300\n"
 "Last-Translator: AlexL <loginov.alex.valer@gmail.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language-Team: Swedish <LL@li.org>\n"
+"Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
