- return German, Spanish, Dutch, Portugese translations from gperiodic-1.3.3
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@7 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@
    Add i18n for desktop file with intltool
    Make displayed element data selectable/copyable
    Decorate buttons with element information
+   Return German, Spanish, Dutch, Portugese translations from gperiodic-1.3.3
 
 2.0.10 Jul 11 2007
    Minor code update & include translations
