--- a/README
+++ b/README
@@ -8,7 +8,7 @@ Description:
  browse through the elements, and view detailed information about each
  element. This program also features a non-graphical interface.
 
-Copyright © 1999-2007 Jonas Frantz (http://www.frantz.fi), 2014 Alexey Loginov (http://linux.mageia.tk)
+Copyright © 1999-2002 Kyle R. Burton, 2003-2007 Jonas Frantz, 2014 Alexey Loginov
 All Rights Reserved.
 
 This program is copyrighted under the GNU GPLv2 or later.  Please see the file gpl.txt,
