--- a/po/gperiodic.pot
+++ b/po/gperiodic.pot
@@ -139,7 +139,7 @@ msgid ""
 msgstr ""
 
 #: gperiodic.h:103
-msgid "Copyright (C) 1999-2007 Jonas Frantz, 2014 Alexey Loginov"
+msgid "Copyright (C) 1999-2002 Kyle R. Burton, 2003-2007 Jonas Frantz, 2014 Alexey Loginov"
 msgstr ""
 
 #: gperiodic.h:104
