--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,8 @@
    Make displayed element data selectable/copyable
    Decorate buttons with element information
    Return German, Spanish, Dutch, Portugese translations from gperiodic-1.3.3
+   Add manual from Debian with little changes
+   Add hicolor icons
 
 2.0.10 Jul 11 2007
    Minor code update & include translations
