- add Ukrainian translation
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@13 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/AUTHORS
+++ b/AUTHORS
@@ -27,3 +27,4 @@ Leandro Regueiro <leandro.regueiro@gmail.com>                         Galician t
 Andrea Tasso <andrea@tasso.info>                                      Italian translation
 Osman Köşeli <?>                                                      Turkish translation
 Ireneusz Imiolek <imiolek.i@googlemail.com>                           Polish translation
+Mishchenko Oleksandr <sasha.mishchenko@gmail.com>                     Ukrainian translation
