--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@
    Return German, Spanish, Dutch, Portugese translations from gperiodic-1.3.3
    Add manual from Debian with little changes
    Add hicolor icons
+   Add Ukrainian translation from Mishchenko Oleksandr
 
 2.0.10 Jul 11 2007
    Minor code update & include translations
